--- a/src/index.css
+++ b/src/index.css
@@ -162,4 +162,20 @@
   position: absolute;
 }
 
-@media (max-width:720px) {}
+
+
+.perspective {
+  perspective: 1000px;
+}
+
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
